--- a/z_lib_main/src/main/res/layout/main_activity_main.xml
+++ b/z_lib_main/src/main/res/layout/main_activity_main.xml
@@ -4,6 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+
+    <Button
+        android:id="@+id/news_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="News"
+        android:layout_marginTop="100dp"/>
+
+    <Button
+        android:id="@+id/girls_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Girls" />
+
+    <Button
+        android:id="@+id/fragment_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Fragment" />
 
 </LinearLayout>
