--- a/z_lib_main/src/main/res/layout/main_activity_main.xml
+++ b/z_lib_main/src/main/res/layout/main_activity_main.xml
@@ -13,18 +13,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="News"
+        android:textAllCaps="false"
         android:layout_marginTop="100dp"/>
 
     <Button
         android:id="@+id/girls_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:text="Girls" />
 
     <Button
         android:id="@+id/fragment_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:text="Fragment" />
 
 </LinearLayout>
