--- a/z_lib_common/src/main/res/values/styles.xml
+++ b/z_lib_common/src/main/res/values/styles.xml
@@ -8,6 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <!--无ActionBar的AppTheme-->
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
