--- a/z_lib_common/src/main/res/values/colors.xml
+++ b/z_lib_common/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="cff666666">#ff666666</color>
     <color name="ce0e0e0">#e0e0e0</color>
 </resources>
