--- a/z_lib_common/src/main/res/values/styles.xml
+++ b/z_lib_common/src/main/res/values/styles.xml
@@ -50,4 +50,10 @@
         <attr name="currentAngle" format="integer" />
     </declare-styleable>
 
+
+    <declare-styleable name="NewStyleToolBar">
+        <attr name="selectItem" format="integer" />
+        <attr name="main" format="boolean" />
+    </declare-styleable>
+
 </resources>
