--- a/z_lib_common/src/main/res/values/styles.xml
+++ b/z_lib_common/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -18,6 +18,7 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
     </style>
 
     <!--全屏-->
@@ -55,5 +56,6 @@
         <attr name="selectItem" format="integer" />
         <attr name="main" format="boolean" />
     </declare-styleable>
+
 
 </resources>
