--- a/z_lib_common/src/main/res/layout/common_action_bar.xml
+++ b/z_lib_common/src/main/res/layout/common_action_bar.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_action_bar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#03A9F4">
+    android:background="#DEE1E2">
 
     <ImageView
         android:id="@+id/iv_back"
