--- a/z_lib_news/src/main/res/layout/news_fragment_main_news.xml
+++ b/z_lib_news/src/main/res/layout/news_fragment_main_news.xml
@@ -1,14 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NewsMainFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <Button
+        android:id="@+id/news_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_centerInParent="true"
         android:text="我是来自news组件的Fragment " />
 
-</FrameLayout>
+</RelativeLayout>
