--- a/z_lib_home/src/main/res/layout/home_activity_sample.xml
+++ b/z_lib_home/src/main/res/layout/home_activity_sample.xml
@@ -100,7 +100,7 @@
             android:padding="30dp" />
 
 
-        <com.example.z_lib_common.imageloader.utils.MultiView
+        <com.example.z_lib_common.utils.MultiView
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:layout_margin="30dp"
@@ -108,7 +108,7 @@
             lb:angleCount="5"
             lb:type="multi" />
 
-        <com.example.z_lib_common.imageloader.utils.MultiView
+        <com.example.z_lib_common.utils.MultiView
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
@@ -117,7 +117,7 @@
             lb:borderRadius="10dp"
             lb:type="round" />
 
-        <com.example.z_lib_common.imageloader.utils.MultiView
+        <com.example.z_lib_common.utils.MultiView
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
