--- a/z_lib_datas/src/main/res/layout/data_fragment_data_main.xml
+++ b/z_lib_datas/src/main/res/layout/data_fragment_data_main.xml
@@ -6,6 +6,7 @@
     tools:context="com.example.z_lib_datas.DataMainFragment">
 
     <TextView
+        android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
