--- a/modulePublic/z_lib_common/src/main/res/values/colors.xml
+++ b/modulePublic/z_lib_common/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="cff666666">#ff666666</color>
     <color name="ce0e0e0">#e0e0e0</color>
+    <color name="c1b9cde">#1b9cde</color>
+    <color name="cFFFFFF">#ffffff</color>
 </resources>
