--- a/moduleCore/z_lib_news/src/main/res/layout/news_fragment_table.xml
+++ b/moduleCore/z_lib_news/src/main/res/layout/news_fragment_table.xml
@@ -45,7 +45,7 @@
                     android:layout_height="130dp"
                     android:background="#fff"
                     android:orientation="vertical"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     app:layout_collapseMode="pin"
                     app:layout_collapseParallaxMultiplier="0.6">
 
