--- a/moduleCore/z_lib_news/src/main/res/layout/news_fragment_home.xml
+++ b/moduleCore/z_lib_news/src/main/res/layout/news_fragment_home.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -27,7 +28,7 @@
                     android:layout_height="130dp"
                     android:background="#fff"
                     android:orientation="vertical"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     app:layout_collapseMode="pin"
                     app:layout_collapseParallaxMultiplier="0.6">
 
@@ -38,6 +39,13 @@
                         android:gravity="center"
                         android:orientation="horizontal">
 
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="2dp"
+                            android:layout_marginLeft="35dp"
+                            android:layout_weight="1"
+                            android:background="#ff1a5f52" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -47,12 +55,6 @@
                             android:textColor="#ffce5b60"
                             android:textSize="17sp" />
 
-                        <View
-                            android:layout_width="0dp"
-                            android:layout_height="2dp"
-                            android:layout_marginLeft="35dp"
-                            android:layout_weight="1"
-                            android:background="#ff1a5f52" />
 
                         <View
                             android:layout_width="0dp"
@@ -79,6 +81,7 @@
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:gravity="center"
+                            android:text="小米金融"
                             android:textColor="#ff595757"
                             android:textSize="@dimen/f12" />
 
@@ -90,11 +93,6 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    app:layout_collapseMode="pin" />
             </android.support.design.widget.CollapsingToolbarLayout>
         </android.support.design.widget.AppBarLayout>
 
@@ -159,7 +157,6 @@
                     android:text="浮本浮息"
                     android:textColor="@color/news_select_choose_red_to_green"
                     android:textSize="14sp" />
-
             </RadioGroup>
 
             <LinearLayout
@@ -206,7 +203,6 @@
                 android:layout_height="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
         </LinearLayout>
-
 
     </android.support.design.widget.CoordinatorLayout>
 
