--- a/moduleCore/z_lib_news/src/main/res/layout/news_fragment_home_child.xml
+++ b/moduleCore/z_lib_news/src/main/res/layout/news_fragment_home_child.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.table.TableChildFragment">
+    tools:context=".fragment.home.HomeChildFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/child_rv"
