--- a/moduleCore/z_lib_news/src/main/res/layout/news_fragment_table.xml
+++ b/moduleCore/z_lib_news/src/main/res/layout/news_fragment_table.xml
@@ -19,14 +19,18 @@
             app:layout_scrollFlags="scroll"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:textColor="@android:color/white"
-                android:gravity="center"
-                android:text="自定义标题"
-                android:textSize="18sp" />
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textColor="@android:color/white"
+                    android:gravity="center"
+                    android:text="自定义标题"
+                    android:textSize="18sp" />
+            </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
 
