--- a/moduleCore/z_lib_news/src/main/res/layout/news_fragment_me.xml
+++ b/moduleCore/z_lib_news/src/main/res/layout/news_fragment_me.xml
@@ -1,50 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true" >
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/abl_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true" >
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-            app:contentScrim="@color/c1b9cde" >
+            app:contentScrim="@color/c1b9cde"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <include
+                layout="@layout/news_fragment_two"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/d100"
                 android:layout_marginTop="@dimen/d50"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.7"
-                layout="@layout/news_fragment_two" />
+                app:layout_collapseParallaxMultiplier="0.7" />
 
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="?android:actionBarSize"
-                app:layout_collapseMode="pin"
                 app:contentInsetLeft="0dp"
-                app:contentInsetStart="0dp" >
+                app:contentInsetStart="0dp"
+                app:layout_collapseMode="pin">
 
                 <include
                     android:id="@+id/tl_expand"
+                    layout="@layout/news_fragment_one"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    layout="@layout/news_fragment_one" />
+                    android:layout_height="match_parent" />
 
                 <include
                     android:id="@+id/tl_collapse"
+                    layout="@layout/news_fragment_two"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    layout="@layout/news_fragment_two"
                     android:visibility="gone" />
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
